--- a/style.css
+++ b/style.css
@@ -1,14 +1,31 @@
 body {
   background-size: 100%;
-  background: black;
+  background: #101516;
+  font-family: Arial, sans-serif;
 }
 .card {
-  width: 560px;
-  height: 314px;
-  background-color: rgb(211, 198, 198);
-  margin-top: 220px;
-  margin-left: auto;
-  margin-right: auto;
+  transform: rotate3d(2, 2, 1, -15deg);
+  width: 280px;
+  height: 280px;
+  background-color: #faeff2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  padding: 30px;
+}
+.card h4 {
+  margin: 0
+}
+.card ul {
+  margin: 15px 0 0 0;
+  list-style: none;
+  padding: 0;
+}
+.card li {
+  margin: 5px 0;
 }
 .avatarMes {
   height: 30px;
@@ -20,16 +37,61 @@ body {
   width: 30px;
   vertical-align: middle;
 }
-.dribble {
-  background: rgb(10, 1, 1);
-  color: rgb(241, 239, 239);
-  height: 24px;
-  width: 74px;
+.button {
+  background: #000;
+  color: #fff;
   text-align: center;
+  font-size: 16px;
+  padding: 7px 14px;
+  border: none;
+  cursor: pointer;
+  margin-top: 50px;
+}
+.button:hover {
+  background: #252525;
 }
 .dribblebox {
   margin: auto;
 }
 .line {
-  width: 80%;
+  width: 100%;
+  margin: 25px 0;
+  border-color: black;
+}
+.avatars img {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  border-radius: 100px;
+  position: relative;
+  margin-left: -20px;
+  border: 2px solid #faeff2;
+}
+.avatars img:nth-child(1) {
+  margin-left: -2px;
+}
+.footer {
+  position: relative;
+}
+.play {
+  position: absolute;
+  background: black;
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  color: #fff;
+  text-align: center;
+  line-height: 50px;
+  font-size: 32px;
+  top: 2px;
+  right: 0;
+}
+.time {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  line-height: 54px;
+  right: 60px;
+  color: #787878;
 }
